// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Source List renders correctly 1`] = `
"
<ul class=\\"MuiList-root MuiList-padding\\" aria-label=\\"streams\\">
  <div class=\\"MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">
    <div class=\\"MuiListItemText-root\\">
      <span class=\\"MuiTypography-root MuiListItemText-primary MuiTypography-body1\\">Title 1</span>
    </div>
  </div>
  <div class=\\"MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">
    <div class=\\"MuiListItemText-root\\">
      <span class=\\"MuiTypography-root MuiListItemText-primary MuiTypography-body1\\">Title 2</span>
    </div>
  </div>
  <div class=\\"MuiButtonBase-root MuiListItem-root disabled MuiListItem-gutters MuiListItem-button\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">
    <div class=\\"MuiListItemText-root\\">
      <span class=\\"MuiTypography-root MuiListItemText-primary MuiTypography-body1\\">Title 3</span>
    </div>
  </div>
</ul>
"
`;

exports[`The Source List when the user searches something renders correctly 1`] = `
"
<ul class=\\"MuiList-root MuiList-padding\\" aria-label=\\"streams\\">
  <div class=\\"MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">
    <div class=\\"MuiListItemText-root\\">
      <span class=\\"MuiTypography-root MuiListItemText-primary MuiTypography-body1\\">Title 1</span>
    </div>
  </div>
  <div class=\\"MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button\\" tabindex=\\"0\\" role=\\"button\\" aria-disabled=\\"false\\">
    <div class=\\"MuiListItemText-root\\">
      <span class=\\"MuiTypography-root MuiListItemText-primary MuiTypography-body1\\">Title 2</span>
    </div>
  </div>
</ul>
"
`;
